crates/compiler/cypress/tests/snapshots/test_parse__when_with_records_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "when x is\n { y } -> 2\n { z, w } -> 4\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (BeginWhen
            Ident=>LowerIdent@1
            InlineKwIs=>KwIs@2
            (BeginPatternRecord
                Ident=>LowerIdent@4
                PatternAny=>CloseCurly@5
            EndPatternRecord)
            InlineWhenArrow=>OpArrow@6
            Num=>Int@7
            (BeginPatternRecord
                Ident=>LowerIdent@9
                PatternAny=>Comma@10
                Ident=>LowerIdent@11
                PatternAny=>CloseCurly@12
            EndPatternRecord)
            InlineWhenArrow=>OpArrow@13
            Num=>Int@14
        EndWhen)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
When(Ident("x"), [PatternRecord([("y", PatternAny)]), IntBase10("2"), PatternRecord([("z", PatternAny), ("w", PatternAny)]), IntBase10("4")])

[=== formatted below ===]

