crates/compiler/cypress/tests/snapshots/test_parse__when_with_tuples_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "when (1, 2) is\n (1, x) -> x\n (_, b) -> 3 + b\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (BeginWhen
            (BeginParens Num=>Int@2 Num=>Int@4 EndParens)
            InlineKwIs=>KwIs@6
            (BeginPatternParens=>LowerIdent@13
                Num=>Int@8
                Ident=>LowerIdent@10
            EndPatternParens)
            InlineWhenArrow=>OpArrow@12
            Ident=>LowerIdent@13
            (BeginPatternParens=>OpArrow@19
                Underscore=>Underscore@15
                Ident=>LowerIdent@17
            EndPatternParens)
            InlineWhenArrow=>OpArrow@19
            (* Num=>Int@20 InlineBinOpPlus=>OpPlus@21 Ident=>LowerIdent@22 EndBinOpPlus)
        EndWhen)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
When(Tuple([IntBase10("1"), IntBase10("2")]), [Tuple([IntBase10("1"), Ident("x")]), Ident("x"), Tuple([Underscore("_"), Ident("b")]), BinOp(IntBase10("3"), Plus, Ident("b"))])

[=== formatted below ===]

